# ESEm

./: .gitignore  CONTRIBUTING.md  README.md  README.rst  codecov.yml  conda-requirements.txt  conda-requirements.yml  postBuild  readthedocs.yml  readthedocs_env.yml  setup.cfg  setup.py  tests_requirements.txt
.circleci/: config.yml
GCEm/: __init__.py  abc_sampler.py  cube_wrapper.py  data_processors.py  emulator.py  gp_model.py  model.py  model_adaptor.py  nn_model.py  rf_model.py  sampler.py  utils.py
doc/: index.rst  installation.rst
docs/: README.md  api.rst  calibration.rst  conf.py  design.rst  emulation.rst  examples.rst  glossary.rst  index.rst  installation.rst  requirements.txt  whats_new.rst  whats_new_1.1.rst
docs/examples/: CMIP6_emulator.ipynb  CMIP6_scenarios.csv  CRM_Emulation_with_RandomForest.ipynb  Calibrating_GPs_using_ABC.ipynb  Calibrating_GPs_using_MCMC.ipynb  Create_GP_and_CNN_emulation_figure.ipynb  Emulating_ClimateBench.ipynb  README.md  (+5 more)
esem/: __init__.py  abc_sampler.py  data_processors.py  emulator.py  model_adaptor.py  sampler.py  utils.py  wrappers.py
examples/: CRM_Emulation_with_RandomForest.ipynb  Calibrating_GPs_using_ABC.ipynb  Calibrating_GPs_using_MCMC.ipynb  Calibrating_using_GPs.ipynb  Emulating_using_ConvNets.ipynb  Emulating_using_GPs.ipynb  README.md  utils.py  utils_rf.py
tests/: __init__.py  mock.py  test_abc_sampler.py  test_cube_wrapper.py  test_data_processors.py  test_emulator.py  test_gp_model.py  test_mcmc_sampler.py  test_nn_model.py  test_rf_model.py  test_sampler.py  test_utils.py  test_wrappers.py
