[metadata]
name = ESEm
author = Duncan Watson-Parris
author_email = duncan.watson-parris@physics.ox.ac.uk
license = Apache
description = Earth System Emulator
long_description_content_type=text/x-rst
long_description =
    A tool for emulating geophysical models including (but not limited to!) Earth System Models.


classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords =
    climate
    machine-learning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    tensorflow
    tensorflow-probability
    numpy
    matplotlib
    scipy
    tqdm
    setuptools >= 40.4  # For pkg_resources
setup_requires =
    setuptools >= 40.4
    setuptools_scm


[options.extras_require]
keras =
    keras

gpflow =
    gpflow

sklearn =
    sklearn

complete =
    %(keras)s
    %(gpflow)s
    %(sklearn)s

docs =
    sphinx == 4.0.2
    nbsphinx >= 0.8.6
    ipython
    sphinx-autosummary-accessors
    sphinx_rtd_theme

[tool:pytest]
python_files = test_*.py
testpaths = tests
markers =
    slow: slow tests
